# fyipedia

./: README.md  demo.tape  pyproject.toml
skills/fyipedia-cli/: SKILL.md
src/fyipedia/: __init__.py  cli.py
tests/: test_cli.py
